--- a/src/styles/components/sidebar.css
+++ b/src/styles/components/sidebar.css
@@ -5,11 +5,9 @@
 	z-index: 2;
 
 	height: 100%;
-	border: 1px solid var(--border-soft);
-	border-top: none;
-	border-bottom: none;
+	border-right: 1px solid var(--border-soft);
 
-	min-width: 80px;
+	min-width: 60px;
 }
 
 .sidebar__progress {
