--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,31 +1,33 @@
 .homepage__homepage {
 	height: 100%;
 	background-image: radial-gradient(
-		230.88% 96.39% at 19.17% 21.57%,
-		#3DA42C 0%, #1C8026 25%,
-		#246E1B 41.15%, #256B19 60.42%,
-		#218A2B 96.35%
-	);
+        75% 75% at 68% 71%,
+        #3DA42C10 0%,
+        #1C802660 100%
+    ), radial-gradient(
+        75% 75% at 31% 26%,
+        #559c34 0%, rgb(21, 45, 21) 100%
+    );
 }
 
 .homepage__content {
 	display: flex;
 	width: 100%;
 	height: 100%;
-	border-bottom: 1px solid var(--border-soft);
-	border-right: 1px solid var(--border-soft);
+	/* border-bottom: 1px solid var(--border-soft); */
+	/* border-right: 1px solid var(--border-soft); */
 }
 
 .homepage__main {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
-	border-right: 1px solid var(--border-soft);
-	border-bottom: 1px solid var(--border-soft);
+	/* border-right: 1px solid var(--border-soft); */
+	/* border-bottom: 1px solid var(--border-soft); */
 }
 
 @media screen and (max-width: 660px) {
 	.homepage__content {
-		border-left: 1px solid var(--border-soft);
+		/* border-left: 1px solid var(--border-soft); */
 	}
 }
